syntax = "proto3";
package usermsg;

option go_package= "distribuidos/go-usermsg-grpc;go_usermsg_grpc";

message Message {    //con message escribimos una estructura del mensaje "Message"
    string play = 1;  //mensaje con el que el jugador acepta seguir jugando
    
}

message User{     
    int32 ID =1;  //ID del jugador
    
}

message Jugada{    
    int32 ID = 1;    //ID jugador
    int32 jugada = 2; //número elegido por el jugador
    int32 ronda =3; // ronda a la que corresponde la jugada
    int32 etapa = 4; //etapa a la que correponde la jugada
}

message Resp{
    int32 survive = 1; // 0 si el jugador murio, 1 si sigue vivo
    int32 partida =2 ; // 1 si la partida sigue en curso, 0 cc
    int32 juego = 3; //estado del juego (en caso de que sea el único en sobrevivir y ganar)
    int32 ronda =4; 
    int32 etapa =5; 
}

message Req{
    string req = 1;
}

message Monto{
    int32 monto =1; 
}


message Registro{
    string response =1;
}

message Check{
    string check =1;
}

message Data{
    int32 etapa =1;
    int32 ronda=2;
    int32 jugada= 3;
}

service LiderServices {  //con los service definimos los Servicios del Lider
    rpc Play(Message) returns (User) {};   // en este caso tenemos un método NewPlayer que rebide un Message y retorna un User
    rpc Juego(Jugada) returns (Resp){};
    rpc Pozo(Req) returns (Monto){};
    rpc Continue(Message) returns(Check){};
}

service PozoServices {
    rpc MontoPozo(Req) returns (Monto){};
}

service NameNode{
    rpc JugadaPlayer(Jugada) returns(Registro){};
}
service DataNode{
    rpc RegistrarInfo(Jugada) returns(Check){};
    rpc PlayerInfo(User) returns(Data){};
}
